--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,8 +5,6 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, maximum-scale=1">
 
-	<title>Homepage</title>
-
 </head>
 
 <body>
@@ -16,9 +14,9 @@
 			<figure class="logo animated fadeInDown delay-07s">
 				<a href="#"><img src="/assets/logo.png" alt=""></a>
 			</figure>
-			<h1 class="animated fadeInDown delay-07s">Welcome To Knight Studios</h1>
+			<h1 class="animated fadeInDown delay-07s">The Hacking Project</h1>
 			<ul class="we-create animated fadeInUp delay-1s">
-				<li>We are a digital agency that loves crafting beautiful websites.</li>
+				<li>Apprends à coder en communauté</li>
 			</ul>
 			<a class="link animated fadeInUp delay-1s servicelink" href="#service">Get Started</a>
 		</div>
@@ -29,12 +27,12 @@
 		<!--main-nav-start-->
 		<div class="container">
 			<ul class="main-nav">
-				<li><a href="#header">Home</a></li>
-				<li><a href="#service">Services</a></li>
-				<li><a href="#Portfolio">Portfolio</a></li>
+				<li><a href="#header">Accueil</a></li>
+				<li><a href="#programme">Programme</a></li>
+				<li><a href="#villes">Villes</a></li>
 				<li class="small-logo"><a href="#header"><img src="/assets/small-logo.png" alt=""></a></li>
-				<li><a href="#client">Clients</a></li>
-				<li><a href="#team">Team</a></li>
+				<li><a href="#client">Prix</a></li>
+				<li><a href="#team">Témoignages</a></li>
 				<li><a href="#contact">Contact</a></li>
 			</ul>
 			<a class="res-nav_click" href="#"><i class="fa fa-bars"></i></a>
@@ -44,11 +42,11 @@
 
 
 
-	<section class="main-section" id="service">
+	<section class="main-section" id="programme">
 		<!--main-section-start-->
 		<div class="container">
-			<h2>Services</h2>
-			<h6>We offer exceptional service with complimentary hugs.</h6>
+			<h2>Programme</h2>
+			<h6>THP est une formation qui, en 3 mois, à plein temps, vous apportera des connaissances actionnables pour vous permettre de voir plus loin</h6>
 			<div class="row">
 				<div class="col-lg-4 col-sm-6 wow fadeInLeft delay-05s">
 					<div class="service-list">
@@ -56,8 +54,8 @@
 							<i class="fa fa-paw"></i>
 						</div>
 						<div class="service-list-col2">
-							<h3>branding &amp; identity</h3>
-							<p>Proin iaculis purus digni consequat sem digni ssim. Donec entum digni ssim.</p>
+							<h3>La communauté comme professeur</h3>
+							<p>800 personnes sont prêtes à vous soutenir !</p>
 						</div>
 					</div>
 					<div class="service-list">
@@ -65,8 +63,8 @@
 							<i class="fa fa-gear"></i>
 						</div>
 						<div class="service-list-col2">
-							<h3>web development</h3>
-							<p>Proin iaculis purus consequat sem digni ssim. Digni ssim porttitora .</p>
+							<h3>Une caution ?</h3>
+							<p>Tu paies une caution de 314.15€ que tu peux récupérer à la fin si tu le souhaites.</p>
 						</div>
 					</div>
 					<div class="service-list">
@@ -74,17 +72,8 @@
 							<i class="fa fa-apple"></i>
 						</div>
 						<div class="service-list-col2">
-							<h3>mobile design</h3>
-							<p>Proin iaculis purus consequat digni sem digni ssim. Purus donec porttitora entum.</p>
-						</div>
-					</div>
-					<div class="service-list">
-						<div class="service-list-col1">
-							<i class="fa fa-medkit"></i>
-						</div>
-						<div class="service-list-col2">
-							<h3>24/7 Support</h3>
-							<p>Proin iaculis purus consequat sem digni ssim. Sem porttitora entum.</p>
+							<h3>Où sommes-nous ?</h3>
+							<p>Nous sommes présents dans les 12 plus grandes villes françaises</p>
 						</div>
 					</div>
 				</div>
@@ -107,15 +96,14 @@
 					<img src="/assets/iphone.png" alt="">
 				</figure>
 				<div class="col-lg-7 col-sm-8 featured-work">
-					<h2>featured work</h2>
-					<P class="padding-b">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit.</P>
+					<h2>THP résumé en 4 points</h2>
 					<div class="featured-box">
 						<div class="featured-box-col1 wow fadeInRight delay-02s">
 							<i class="fa fa-magic"></i>
 						</div>
 						<div class="featured-box-col2 wow fadeInRight delay-02s">
-							<h3>magic of theme development</h3>
-							<p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. </p>
+							<h3>Intense, et en groupe</h3>
+							<p>T.H.P, ce n'est pas de tous repos, mais vos camarades seront là pour vous aider, et souvent jusque très tard ;)</p>
 						</div>
 					</div>
 					<div class="featured-box">
@@ -123,8 +111,8 @@
 							<i class="fa fa-gift"></i>
 						</div>
 						<div class="featured-box-col2 wow fadeInRight delay-04s">
-							<h3>neatly packaged</h3>
-							<p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. </p>
+							<h3>Une caution</h3>
+							<p>Nous nous investissons beaucoup pour vous : la caution est un moyen d'être sûr que vous resterez investis vous aussi !</p>
 						</div>
 					</div>
 					<div class="featured-box">
@@ -132,11 +120,19 @@
 							<i class="fa fa-dashboard"></i>
 						</div>
 						<div class="featured-box-col2 wow fadeInRight delay-06s">
-							<h3>SEO optimized</h3>
-							<p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. </p>
+							<h3>En anglais</h3>
+							<p>L'anglais est la langue de la programmation. Nous vous recommandons de ne pas faire THP si vous n'avez pas de bases (10/20 au bac suffit).</p>
 						</div>
 					</div>
-					<a class="Learn-More" href="#">Learn More</a>
+					<div class="featured-box">
+						<div class="featured-box-col1 wow fadeInRight delay-08s">
+							<i class="fa fa-dashboard"></i>
+						</div>
+						<div class="featured-box-col2 wow fadeInRight delay-08s">
+							<h3>Pas de locaux, ni de professeurs</h3>
+							<p>Espaces de coworking, bibliothèques, appartement, devriendront rapidement vos nouveaux lieux de vie.</p>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -145,52 +141,60 @@
 
 
 
-	<section class="main-section paddind" id="Portfolio">
+	<section class="main-section paddind" id="villes">
 		<!--main-section-start-->
 		<div class="container">
-			<h2>Portfolio</h2>
-			<h6>Fresh portfolio of designs that will keep you wanting more.</h6>
-			<div class="portfolioFilter">
-				<ul class="Portfolio-nav wow fadeIn delay-02s">
-					<li><a href="#" data-filter="*" class="current">All</a></li>
-					<li><a href="#" data-filter=".branding">Branding</a></li>
-					<li><a href="#" data-filter=".webdesign">Web design</a></li>
-					<li><a href="#" data-filter=".printdesign">Print design</a></li>
-					<li><a href="#" data-filter=".photography">Photography</a></li>
-				</ul>
-			</div>
+			<h2>Villes</h2>
 
 		</div>
 		<div class="portfolioContainer wow fadeInUp delay-04s">
 			<div class=" Portfolio-box printdesign">
 				<a href="/assets/Portfolio-pic1.jpg"><img src="/assets/Portfolio-pic1.jpg" alt=""></a>
-				<h3>Foto Album</h3>
-				<p>Print Design</p>
+				<h3>Paris</h3>
 			</div>
 			<div class="Portfolio-box webdesign">
 				<a href="/assets/Portfolio-pic2.jpg"><img src="/assets/Portfolio-pic2.jpg" alt=""></a>
-				<h3>Luca Theme</h3>
-				<p>Web Design</p>
+				<h3>Rennes</h3>
 			</div>
 			<div class=" Portfolio-box branding">
 				<a href="/assets/Portfolio-pic3.jpg"><img src="/assets/Portfolio-pic3.jpg" alt=""></a>
-				<h3>Uni Sans</h3>
-				<p>Branding</p>
+				<h3>Grenoble</h3>
 			</div>
 			<div class=" Portfolio-box photography">
 				<a href="/assets/Portfolio-pic4.jpg"><img src="/assets/Portfolio-pic4.jpg" alt=""></a>
-				<h3>Vinyl Record</h3>
-				<p>Photography</p>
+				<h3>Lille</h3>
 			</div>
 			<div class=" Portfolio-box branding">
 				<a href="/assets/Portfolio-pic5.jpg"><img src="/assets/Portfolio-pic5.jpg" alt=""></a>
-				<h3>Hipster</h3>
-				<p>Branding</p>
+				<h3>Caen</h3>
 			</div>
 			<div class=" Portfolio-box photography">
 				<a href="/assets/Portfolio-pic6.jpg"><img src="/assets/Portfolio-pic6.jpg" alt=""></a>
-				<h3>Windmills</h3>
-				<p>Photography</p>
+				<h3>Montpellier</h3>
+			</div>
+			<div class=" Portfolio-box photography">
+				<a href="/assets/Portfolio-pic6.jpg"><img src="/assets/Portfolio-pic6.jpg" alt=""></a>
+				<h3>Toulouse</h3>
+			</div>
+			<div class=" Portfolio-box photography">
+				<a href="/assets/Portfolio-pic6.jpg"><img src="/assets/Portfolio-pic6.jpg" alt=""></a>
+				<h3>Bordeaux</h3>
+			</div>
+			<div class=" Portfolio-box photography">
+				<a href="/assets/Portfolio-pic6.jpg"><img src="/assets/Portfolio-pic6.jpg" alt=""></a>
+				<h3>Nice</h3>
+			</div>
+			<div class=" Portfolio-box photography">
+				<a href="/assets/Portfolio-pic6.jpg"><img src="/assets/Portfolio-pic6.jpg" alt=""></a>
+				<h3>Nantes</h3>
+			</div>
+			<div class=" Portfolio-box photography">
+				<a href="/assets/Portfolio-pic6.jpg"><img src="/assets/Portfolio-pic6.jpg" alt=""></a>
+				<h3>Strasbourg</h3>
+			</div>
+			<div class=" Portfolio-box photography">
+				<a href="/assets/Portfolio-pic6.jpg"><img src="/assets/Portfolio-pic6.jpg" alt=""></a>
+				<h3>Lyon</h3>
 			</div>
 		</div>
 	</section>
@@ -203,14 +207,14 @@
 			<b class="quote-right wow fadeInDown delay-03"><i class="fa fa-quote-right"></i></b>
 			<div class="row">
 				<div class="col-lg-12">
-					<p class="client-part-haead wow fadeInDown delay-05">It was a pleasure to work with the guys at Knight Studio. They made sure we were well fed and drunk all the time!</p>
+					<p class="client-part-haead wow fadeInDown delay-05">Nos tarifs<br/>Choisissez la formule qui vous convient</p>
 				</div>
 			</div>
 			<ul class="client wow fadeIn delay-05s">
 				<li><a href="#">
             	<img src="/assets/client-pic1.jpg" alt="">
-                <h3>James Bond</h3>
-                <span>License To Drink Inc.</span>
+                <h3> Nos tarifs</h3>
+                <span>Pas cher ;)</span>
             </a></li>
 			</ul>
 		</div>
@@ -232,8 +236,7 @@
 	<section class="main-section team" id="team">
 		<!--main-section team-start-->
 		<div class="container">
-			<h2>team</h2>
-			<h6>Take a closer look into our amazing team. We won’t bite.</h6>
+			<h2>Témoignages</h2>
 			<div class="team-leader-block clearfix">
 				<div class="team-leader-box">
 					<div class="team-leader wow fadeInDown delay-03s">
@@ -286,7 +289,6 @@
 	<!--main-section team-end-->
 
 
-
 	<section class="business-talking">
 		<!--business-talking-start-->
 		<div class="container">
@@ -294,26 +296,24 @@
 		</div>
 	</section>
 	<!--business-talking-end-->
+
+
 	<div class="container">
 		<section class="main-section contact" id="contact">
 
 			<div class="row">
 				<div class="col-lg-6 col-sm-7 wow fadeInLeft">
 					<div class="contact-info-box address clearfix">
-						<h3><i class=" icon-map-marker"></i>Address:</h3>
-						<span>308 Negra Arroyo Lane<br>Albuquerque, New Mexico, 87111.</span>
+						<h3><i class=" icon-map-marker"></i>Addresse:</h3>
+						<span>22 Allée Darius Milhaud<br>75019 Paris<br>France</span>
 					</div>
 					<div class="contact-info-box phone clearfix">
-						<h3><i class="fa fa-phone"></i>Phone:</h3>
-						<span>1-800-BOO-YAHH</span>
+						<h3><i class="fa fa-phone"></i>Charles Dacquay</h3>
+						<span>06 95 46 60 80</span>
 					</div>
-					<div class="contact-info-box email clearfix">
-						<h3><i class="fa fa-pencil"></i>email:</h3>
-						<span>hello@knightstudios.com</span>
-					</div>
-					<div class="contact-info-box hours clearfix">
-						<h3><i class="fa fa-clock-o"></i>Hours:</h3>
-						<span><strong>Monday - Thursday:</strong> 10am - 6pm<br><strong>Friday:</strong> People work on Fridays now?<br><strong>Saturday - Sunday:</strong> Best not to ask.</span>
+					<div class="contact-info-box phone clearfix">
+						<h3><i class="fa fa-phone"></i>Félix Gaudé</h3>
+						<span>06 28 01 33 40</span>
 					</div>
 					<ul class="social-link">
 						<li class="twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
