--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,7 +14,6 @@
 			<figure class="logo animated fadeInDown delay-07s">
 				<a href="#"><img src="/assets/logo.png" alt=""></a>
 			</figure>
-			<h1 class="animated fadeInDown delay-07s">The Hacking Project</h1>
 			<ul class="we-create animated fadeInUp delay-1s">
 				<li>Apprends à coder en communauté</li>
 			</ul>
@@ -157,7 +156,7 @@
 				<h3>Rennes</h3>
 			</div>
 			<div class=" Portfolio-box branding">
-				<a href="/assets/Portfolio-pic3.jpg"><img src="/assets/Portfolio-pic3.jpg" alt=""></a>
+				<a href="/assets/Grenoble.jpg"><img src="/assets/Grenoble.jpg" alt=""></a>
 				<h3>Grenoble</h3>
 			</div>
 			<div class=" Portfolio-box photography">
@@ -165,35 +164,35 @@
 				<h3>Lille</h3>
 			</div>
 			<div class=" Portfolio-box branding">
-				<a href="/assets/Portfolio-pic5.jpg"><img src="/assets/Portfolio-pic5.jpg" alt=""></a>
+				<a href="/assets/Cean.jpg"><img src="/assets/Cean.jpg" alt=""></a>
 				<h3>Caen</h3>
 			</div>
 			<div class=" Portfolio-box photography">
-				<a href="/assets/Portfolio-pic6.jpg"><img src="/assets/Portfolio-pic6.jpg" alt=""></a>
+				<a href="/assets/montpellier.jpg"><img src="/assets/montpellier.jpg" alt=""></a>
 				<h3>Montpellier</h3>
 			</div>
 			<div class=" Portfolio-box photography">
-				<a href="/assets/Portfolio-pic6.jpg"><img src="/assets/Portfolio-pic6.jpg" alt=""></a>
+				<a href="/assets/TOULOUSE.jpg"><img src="/assets/TOULOUSE.jpg" alt=""></a>
 				<h3>Toulouse</h3>
 			</div>
 			<div class=" Portfolio-box photography">
-				<a href="/assets/Portfolio-pic6.jpg"><img src="/assets/Portfolio-pic6.jpg" alt=""></a>
+				<a href="/assets/bordeaux.jpg"><img src="/assets/bordeaux.jpg" alt=""></a>
 				<h3>Bordeaux</h3>
 			</div>
 			<div class=" Portfolio-box photography">
-				<a href="/assets/Portfolio-pic6.jpg"><img src="/assets/Portfolio-pic6.jpg" alt=""></a>
+				<a href="/assets/nice.jpg"><img src="/assets/nice.jpg" alt=""></a>
 				<h3>Nice</h3>
 			</div>
 			<div class=" Portfolio-box photography">
-				<a href="/assets/Portfolio-pic6.jpg"><img src="/assets/Portfolio-pic6.jpg" alt=""></a>
+				<a href="/assets/nantes.jpg"><img src="/assets/nantes.jpg" alt=""></a>
 				<h3>Nantes</h3>
 			</div>
 			<div class=" Portfolio-box photography">
-				<a href="/assets/Portfolio-pic6.jpg"><img src="/assets/Portfolio-pic6.jpg" alt=""></a>
+				<a href="/assets/Strasbourg.jpg"><img src="/assets/Strasbourg.jpg" alt=""></a>
 				<h3>Strasbourg</h3>
 			</div>
 			<div class=" Portfolio-box photography">
-				<a href="/assets/Portfolio-pic6.jpg"><img src="/assets/Portfolio-pic6.jpg" alt=""></a>
+				<a href="/assets/Lyon.jpg"><img src="/assets/Lyon.jpg" alt=""></a>
 				<h3>Lyon</h3>
 			</div>
 		</div>
@@ -242,12 +241,6 @@
 					<div class="team-leader wow fadeInDown delay-03s">
 						<div class="team-leader-shadow"><a href="#"></a></div>
 						<img src="/assets/team-leader-pic1.jpg" alt="">
-						<ul>
-							<li><a href="#" class="fa fa-twitter"></a></li>
-							<li><a href="#" class="fa fa-facebook"></a></li>
-							<li><a href="#" class="fa fa-pinterest"></a></li>
-							<li><a href="#" class="fa fa-google-plus"></a></li>
-						</ul>
 					</div>
 					<h3 class="wow fadeInDown delay-03s">Walter White</h3>
 					<span class="wow fadeInDown delay-03s">Chief Executive Officer</span>
@@ -257,12 +250,6 @@
 					<div class="team-leader  wow fadeInDown delay-06s">
 						<div class="team-leader-shadow"><a href="#"></a></div>
 						<img src="/assets/team-leader-pic2.jpg" alt="">
-						<ul>
-							<li><a href="#" class="fa fa-twitter"></a></li>
-							<li><a href="#" class="fa fa-facebook"></a></li>
-							<li><a href="#" class="fa fa-pinterest"></a></li>
-							<li><a href="#" class="fa fa-google-plus"></a></li>
-						</ul>
 					</div>
 					<h3 class="wow fadeInDown delay-06s">Jesse Pinkman</h3>
 					<span class="wow fadeInDown delay-06s">Product Manager</span>
@@ -272,12 +259,6 @@
 					<div class="team-leader wow fadeInDown delay-09s">
 						<div class="team-leader-shadow"><a href="#"></a></div>
 						<img src="/assets/team-leader-pic3.jpg" alt="">
-						<ul>
-							<li><a href="#" class="fa fa-twitter"></a></li>
-							<li><a href="#" class="fa fa-facebook"></a></li>
-							<li><a href="#" class="fa fa-pinterest"></a></li>
-							<li><a href="#" class="fa fa-google-plus"></a></li>
-						</ul>
 					</div>
 					<h3 class="wow fadeInDown delay-09s">Skyler white</h3>
 					<span class="wow fadeInDown delay-09s">Accountant</span>
