--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,443 +8,28 @@
 </head>
 
 <body>
-	<header class="header" id="header">
-		<!--header-start-->
-		<div class="container">
-			<figure class="logo animated fadeInDown delay-07s">
-				<a href="#"><img src="/assets/logo.png" alt=""></a>
-			</figure>
-			<ul class="we-create animated fadeInUp delay-1s">
-				<li>Apprends à coder en communauté</li>
-			</ul>
-			<a class="link animated fadeInUp delay-1s servicelink" href="#service">Get Started</a>
-		</div>
-	</header>
-	<!--header-end-->
 
-	<nav class="main-nav-outer" id="test">
-		<!--main-nav-start-->
-		<div class="container">
-			<ul class="main-nav">
-				<li><a href="#header">Accueil</a></li>
-				<li><a href="#programme">Programme</a></li>
-				<li><a href="#villes">Villes</a></li>
-				<li class="small-logo"><a href="#header"><img src="/assets/small-logo.png" alt=""></a></li>
-				<li><a href="#client">Prix</a></li>
-				<li><a href="#team">Témoignages</a></li>
-				<li><a href="#contact">Contact</a></li>
-			</ul>
-			<a class="res-nav_click" href="#"><i class="fa fa-bars"></i></a>
-		</div>
-	</nav>
-	<!--main-nav-end-->
+	<%= render "shared/header" %>
 
+	<%= render "shared/navbar" %>
 
+	<%= render "shared/programme" %>
 
-	<section class="main-section" id="programme">
-		<!--main-section-start-->
-		<div class="container">
-			<h2>Programme</h2>
-			<h6>THP est une formation qui, en 3 mois, à plein temps, vous apportera des connaissances actionnables pour vous permettre de voir plus loin</h6>
-			<div class="row">
-				<div class="col-lg-4 col-sm-6 wow fadeInLeft delay-05s">
-					<div class="service-list">
-						<div class="service-list-col1">
-							<i class="fa fa-paw"></i>
-						</div>
-						<div class="service-list-col2">
-							<h3>La communauté comme professeur</h3>
-							<p>800 personnes sont prêtes à vous soutenir !</p>
-						</div>
-					</div>
-					<div class="service-list">
-						<div class="service-list-col1">
-							<i class="fa fa-gear"></i>
-						</div>
-						<div class="service-list-col2">
-							<h3>Une caution ?</h3>
-							<p>Tu paies une caution de 314.15€ que tu peux récupérer à la fin si tu le souhaites.</p>
-						</div>
-					</div>
-					<div class="service-list">
-						<div class="service-list-col1">
-							<i class="fa fa-apple"></i>
-						</div>
-						<div class="service-list-col2">
-							<h3>Où sommes-nous ?</h3>
-							<p>Nous sommes présents dans les 12 plus grandes villes françaises</p>
-						</div>
-					</div>
-				</div>
-				<figure class="col-lg-8 col-sm-6  text-right wow fadeInUp delay-02s">
-					<img src="/assets/macbook-pro.png" alt="">
-				</figure>
+	<%= render "shared/resume" %>
 
-			</div>
-		</div>
-	</section>
-	<!--main-section-end-->
+	<%= render "shared/villes" %>
 
+	<%= render "shared/prix" %>
 
+	<%= render "shared/temoignages" %>
 
-	<section class="main-section alabaster">
-		<!--main-section alabaster-start-->
-		<div class="container">
-			<div class="row">
-				<figure class="col-lg-5 col-sm-4 wow fadeInLeft">
-					<img src="/assets/iphone.png" alt="">
-				</figure>
-				<div class="col-lg-7 col-sm-8 featured-work">
-					<h2>THP résumé en 4 points</h2>
-					<div class="featured-box">
-						<div class="featured-box-col1 wow fadeInRight delay-02s">
-							<i class="fa fa-magic"></i>
-						</div>
-						<div class="featured-box-col2 wow fadeInRight delay-02s">
-							<h3>Intense, et en groupe</h3>
-							<p>T.H.P, ce n'est pas de tous repos, mais vos camarades seront là pour vous aider, et souvent jusque très tard ;)</p>
-						</div>
-					</div>
-					<div class="featured-box">
-						<div class="featured-box-col1 wow fadeInRight delay-04s">
-							<i class="fa fa-gift"></i>
-						</div>
-						<div class="featured-box-col2 wow fadeInRight delay-04s">
-							<h3>Une caution</h3>
-							<p>Nous nous investissons beaucoup pour vous : la caution est un moyen d'être sûr que vous resterez investis vous aussi !</p>
-						</div>
-					</div>
-					<div class="featured-box">
-						<div class="featured-box-col1 wow fadeInRight delay-06s">
-							<i class="fa fa-dashboard"></i>
-						</div>
-						<div class="featured-box-col2 wow fadeInRight delay-06s">
-							<h3>En anglais</h3>
-							<p>L'anglais est la langue de la programmation. Nous vous recommandons de ne pas faire THP si vous n'avez pas de bases (10/20 au bac suffit).</p>
-						</div>
-					</div>
-					<div class="featured-box">
-						<div class="featured-box-col1 wow fadeInRight delay-08s">
-							<i class="fa fa-dashboard"></i>
-						</div>
-						<div class="featured-box-col2 wow fadeInRight delay-08s">
-							<h3>Pas de locaux, ni de professeurs</h3>
-							<p>Espaces de coworking, bibliothèques, appartement, devriendront rapidement vos nouveaux lieux de vie.</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!--main-section alabaster-end-->
+	<%= render "shared/business_talking" %>
 
+	<%= render "shared/contact" %>
 
+	<%= render "shared/footer" %>
 
-	<section class="main-section paddind" id="villes">
-		<!--main-section-start-->
-		<div class="container">
-			<h2>Villes</h2>
-
-		</div>
-		<div class="portfolioContainer wow fadeInUp delay-04s">
-			<div class=" Portfolio-box printdesign">
-				<a href="/assets/Portfolio-pic1.jpg"><img src="/assets/Portfolio-pic1.jpg" alt=""></a>
-				<h3>Paris</h3>
-			</div>
-			<div class="Portfolio-box webdesign">
-				<a href="/assets/Portfolio-pic2.jpg"><img src="/assets/Portfolio-pic2.jpg" alt=""></a>
-				<h3>Rennes</h3>
-			</div>
-			<div class=" Portfolio-box branding">
-				<a href="/assets/Grenoble.jpg"><img src="/assets/Grenoble.jpg" alt=""></a>
-				<h3>Grenoble</h3>
-			</div>
-			<div class=" Portfolio-box photography">
-				<a href="/assets/Portfolio-pic4.jpg"><img src="/assets/Portfolio-pic4.jpg" alt=""></a>
-				<h3>Lille</h3>
-			</div>
-			<div class=" Portfolio-box branding">
-				<a href="/assets/Cean.jpg"><img src="/assets/Cean.jpg" alt=""></a>
-				<h3>Caen</h3>
-			</div>
-			<div class=" Portfolio-box photography">
-				<a href="/assets/montpellier.jpg"><img src="/assets/montpellier.jpg" alt=""></a>
-				<h3>Montpellier</h3>
-			</div>
-			<div class=" Portfolio-box photography">
-				<a href="/assets/TOULOUSE.jpg"><img src="/assets/TOULOUSE.jpg" alt=""></a>
-				<h3>Toulouse</h3>
-			</div>
-			<div class=" Portfolio-box photography">
-				<a href="/assets/bordeaux.jpg"><img src="/assets/bordeaux.jpg" alt=""></a>
-				<h3>Bordeaux</h3>
-			</div>
-			<div class=" Portfolio-box photography">
-				<a href="/assets/nice.jpg"><img src="/assets/nice.jpg" alt=""></a>
-				<h3>Nice</h3>
-			</div>
-			<div class=" Portfolio-box photography">
-				<a href="/assets/nantes.jpg"><img src="/assets/nantes.jpg" alt=""></a>
-				<h3>Nantes</h3>
-			</div>
-			<div class=" Portfolio-box photography">
-				<a href="/assets/Strasbourg.jpg"><img src="/assets/Strasbourg.jpg" alt=""></a>
-				<h3>Strasbourg</h3>
-			</div>
-			<div class=" Portfolio-box photography">
-				<a href="/assets/Lyon.jpg"><img src="/assets/Lyon.jpg" alt=""></a>
-				<h3>Lyon</h3>
-			</div>
-		</div>
-	</section>
-	<!--main-section-end-->
-
-
-	<section class="main-section client-part" id="client">
-		<!--main-section client-part-start-->
-		<div class="container">
-			<b class="quote-right wow fadeInDown delay-03"><i class="fa fa-quote-right"></i></b>
-			<div class="row">
-				<div class="col-lg-12">
-					<p class="client-part-haead wow fadeInDown delay-05">Nos tarifs<br/>Choisissez la formule qui vous convient</p>
-				</div>
-			</div>
-			<ul class="client wow fadeIn delay-05s">
-				<li><a href="#">
-            	<img src="/assets/client-pic1.jpg" alt="">
-                <h3> Nos tarifs</h3>
-                <span>Pas cher ;)</span>
-            </a></li>
-			</ul>
-		</div>
-	</section>
-	<!--main-section client-part-end-->
-	<div class="c-logo-part">
-		<!--c-logo-part-start-->
-		<div class="container">
-			<ul>
-				<li><a href="#"><img src="/assets/c-liogo1.png" alt=""></a></li>
-				<li><a href="#"><img src="/assets/c-liogo2.png" alt=""></a></li>
-				<li><a href="#"><img src="/assets/c-liogo3.png" alt=""></a></li>
-				<li><a href="#"><img src="/assets/c-liogo4.png" alt=""></a></li>
-				<li><a href="#"><img src="/assets/c-liogo5.png" alt=""></a></li>
-			</ul>
-		</div>
-	</div>
-	<!--c-logo-part-end-->
-	<section class="main-section team" id="team">
-		<!--main-section team-start-->
-		<div class="container">
-			<h2>Témoignages</h2>
-			<div class="team-leader-block clearfix">
-				<div class="team-leader-box">
-					<div class="team-leader wow fadeInDown delay-03s">
-						<div class="team-leader-shadow"><a href="#"></a></div>
-						<img src="/assets/team-leader-pic1.jpg" alt="">
-					</div>
-					<h3 class="wow fadeInDown delay-03s">Walter White</h3>
-					<span class="wow fadeInDown delay-03s">Chief Executive Officer</span>
-					<p class="wow fadeInDown delay-03s">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consequat sollicitudin cursus. Dolor sit amet, consectetur adipiscing elit proin consequat.</p>
-				</div>
-				<div class="team-leader-box">
-					<div class="team-leader  wow fadeInDown delay-06s">
-						<div class="team-leader-shadow"><a href="#"></a></div>
-						<img src="/assets/team-leader-pic2.jpg" alt="">
-					</div>
-					<h3 class="wow fadeInDown delay-06s">Jesse Pinkman</h3>
-					<span class="wow fadeInDown delay-06s">Product Manager</span>
-					<p class="wow fadeInDown delay-06s">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consequat sollicitudin cursus. Dolor sit amet, consectetur adipiscing elit proin consequat.</p>
-				</div>
-				<div class="team-leader-box">
-					<div class="team-leader wow fadeInDown delay-09s">
-						<div class="team-leader-shadow"><a href="#"></a></div>
-						<img src="/assets/team-leader-pic3.jpg" alt="">
-					</div>
-					<h3 class="wow fadeInDown delay-09s">Skyler white</h3>
-					<span class="wow fadeInDown delay-09s">Accountant</span>
-					<p class="wow fadeInDown delay-09s">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consequat sollicitudin cursus. Dolor sit amet, consectetur adipiscing elit proin consequat.</p>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!--main-section team-end-->
-
-
-	<section class="business-talking">
-		<!--business-talking-start-->
-		<div class="container">
-			<h2>Let’s Talk Business.</h2>
-		</div>
-	</section>
-	<!--business-talking-end-->
-
-
-	<div class="container">
-		<section class="main-section contact" id="contact">
-
-			<div class="row">
-				<div class="col-lg-6 col-sm-7 wow fadeInLeft">
-					<div class="contact-info-box address clearfix">
-						<h3><i class=" icon-map-marker"></i>Addresse:</h3>
-						<span>22 Allée Darius Milhaud<br>75019 Paris<br>France</span>
-					</div>
-					<div class="contact-info-box phone clearfix">
-						<h3><i class="fa fa-phone"></i>Charles Dacquay</h3>
-						<span>06 95 46 60 80</span>
-					</div>
-					<div class="contact-info-box phone clearfix">
-						<h3><i class="fa fa-phone"></i>Félix Gaudé</h3>
-						<span>06 28 01 33 40</span>
-					</div>
-					<ul class="social-link">
-						<li class="twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
-						<li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
-						<li class="pinterest"><a href="#"><i class="fa fa-pinterest"></i></a></li>
-						<li class="gplus"><a href="#"><i class="fa fa-google-plus"></i></a></li>
-						<li class="dribbble"><a href="#"><i class="fa fa-dribbble"></i></a></li>
-					</ul>
-				</div>
-				<div class="col-lg-6 col-sm-5 wow fadeInUp delay-05s">
-					<div class="form">
-
-						<div id="sendmessage">Your message has been sent. Thank you!</div>
-						<div id="errormessage"></div>
-						<form action="" method="post" role="form" class="contactForm">
-							<div class="form-group">
-								<input type="text" name="name" class="form-control input-text" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
-								<div class="validation"></div>
-							</div>
-							<div class="form-group">
-								<input type="email" class="form-control input-text" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
-								<div class="validation"></div>
-							</div>
-							<div class="form-group">
-								<input type="text" class="form-control input-text" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-								<div class="validation"></div>
-							</div>
-							<div class="form-group">
-								<textarea class="form-control input-text text-area" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
-								<div class="validation"></div>
-							</div>
-
-							<div class="text-center"><button type="submit" class="input-btn">Send Message</button></div>
-						</form>
-					</div>
-				</div>
-			</div>
-		</section>
-	</div>
-	<footer class="footer">
-		<div class="container">
-			<div class="footer-logo"><a href="#"><img src="/assets/footer-logo.png" alt=""></a></div>
-			<span class="copyright">&copy; Knight Theme. All Rights Reserved</span>
-			<div class="credits">
-				<!--
-          All the links in the footer should remain intact.
-          You can delete the links only if you purchased the pro version.
-          Licensing information: https://bootstrapmade.com/license/
-          Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Knight
-        -->
-				Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-			</div>
-		</div>
-	</footer>
-
-
-	<script type="text/javascript">
-		$(document).ready(function(e) {
-
-			$('#test').scrollToFixed();
-			$('.res-nav_click').click(function() {
-				$('.main-nav').slideToggle();
-				return false
-
-			});
-
-      $('.Portfolio-box').magnificPopup({
-        delegate: 'a',
-        type: 'image'
-      });
-
-		});
-	</script>
-
-	<script>
-		wow = new WOW({
-			animateClass: 'animated',
-			offset: 100
-		});
-		wow.init();
-	</script>
-
-
-	<script type="text/javascript">
-		$(window).load(function() {
-
-			$('.main-nav li a, .servicelink').bind('click', function(event) {
-				var $anchor = $(this);
-
-				$('html, body').stop().animate({
-					scrollTop: $($anchor.attr('href')).offset().top - 102
-				}, 1500, 'easeInOutExpo');
-				/*
-				if you don't want to use the easing effects:
-				$('html, body').stop().animate({
-					scrollTop: $($anchor.attr('href')).offset().top
-				}, 1000);
-				*/
-				if ($(window).width() < 768) {
-					$('.main-nav').hide();
-				}
-				event.preventDefault();
-			});
-		})
-	</script>
-
-	<script type="text/javascript">
-		$(window).load(function() {
-
-
-			var $container = $('.portfolioContainer'),
-				$body = $('body'),
-				colW = 375,
-				columns = null;
-
-
-			$container.isotope({
-				// disable window resizing
-				resizable: true,
-				masonry: {
-					columnWidth: colW
-				}
-			});
-
-			$(window).smartresize(function() {
-				// check if columns has changed
-				var currentColumns = Math.floor(($body.width() - 30) / colW);
-				if (currentColumns !== columns) {
-					// set new column count
-					columns = currentColumns;
-					// apply width to container manually, then trigger relayout
-					$container.width(columns * colW)
-						.isotope('reLayout');
-				}
-
-			}).smartresize(); // trigger resize to set container width
-			$('.portfolioFilter a').click(function() {
-				$('.portfolioFilter .current').removeClass('current');
-				$(this).addClass('current');
-
-				var selector = $(this).attr('data-filter');
-				$container.isotope({
-
-					filter: selector,
-				});
-				return false;
-			});
-
-		});
-	</script>
+	<%= render "shared/script" %>
 
 </body>
 
