--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,7 +5,7 @@
 				<li><a href="#header">Accueil</a></li>
 				<li><a href="#programme">Programme</a></li>
 				<li><a href="#villes">Villes</a></li>
-				<li class="small-logo"><a href="#header"><img src="/assets/small-logo.png" alt=""></a></li>
+				<li class="small-logo"><a href="#header"><img width="75" height="75" src="/assets/small-logo.png" alt=""></a></li>
 				<li><a href="#client">Prix</a></li>
 				<li><a href="#team">Témoignages</a></li>
 				<li><a href="#contact">Contact</a></li>
