--- a/app/views/shared/_villes.html.erb
+++ b/app/views/shared/_villes.html.erb
@@ -6,51 +6,51 @@
 		</div>
 		<div class="portfolioContainer wow fadeInUp delay-04s">
 			<div class=" Portfolio-box printdesign">
-				<a href="/assets/Portfolio-pic1.jpg"><img src="/assets/Portfolio-pic1.jpg" alt=""></a>
+				<a href="/assets/Portfolio-pic1.jpg"><img width="350" height="235" src="/assets/Portfolio-pic1.jpg" alt=""></a>
 				<h3>Paris</h3>
 			</div>
 			<div class="Portfolio-box webdesign">
-				<a href="/assets/Portfolio-pic2.jpg"><img src="/assets/Portfolio-pic2.jpg" alt=""></a>
+				<a href="/assets/Portfolio-pic2.jpg"><img width="350" height="235" src="/assets/Portfolio-pic2.jpg" alt=""></a>
 				<h3>Rennes</h3>
 			</div>
 			<div class=" Portfolio-box branding">
-				<a href="/assets/Grenoble.jpg"><img src="/assets/Grenoble.jpg" alt=""></a>
+				<a href="/assets/Grenoble.jpg"><img width="350" height="235" src="/assets/Grenoble.jpg" alt=""></a>
 				<h3>Grenoble</h3>
 			</div>
 			<div class=" Portfolio-box photography">
-				<a href="/assets/Portfolio-pic4.jpg"><img src="/assets/Portfolio-pic4.jpg" alt=""></a>
+				<a href="/assets/Portfolio-pic4.jpg"><img width="350" height="235" src="/assets/Portfolio-pic4.jpg" alt=""></a>
 				<h3>Lille</h3>
 			</div>
 			<div class=" Portfolio-box branding">
-				<a href="/assets/Cean.jpg"><img src="/assets/Cean.jpg" alt=""></a>
+				<a href="/assets/Cean.jpg"><img width="350" height="235" src="/assets/Cean.jpg" alt=""></a>
 				<h3>Caen</h3>
 			</div>
 			<div class=" Portfolio-box photography">
-				<a href="/assets/montpellier.jpg"><img src="/assets/montpellier.jpg" alt=""></a>
+				<a href="/assets/montpellier.jpg"><img width="350" height="235" src="/assets/montpellier.jpg" alt=""></a>
 				<h3>Montpellier</h3>
 			</div>
 			<div class=" Portfolio-box photography">
-				<a href="/assets/TOULOUSE.jpg"><img src="/assets/TOULOUSE.jpg" alt=""></a>
+				<a href="/assets/TOULOUSE.jpg"><img width="350" height="235" src="/assets/TOULOUSE.jpg" alt=""></a>
 				<h3>Toulouse</h3>
 			</div>
 			<div class=" Portfolio-box photography">
-				<a href="/assets/bordeaux.jpg"><img src="/assets/bordeaux.jpg" alt=""></a>
+				<a href="/assets/bordeaux.jpg"><img width="350" height="235" src="/assets/bordeaux.jpg" alt=""></a>
 				<h3>Bordeaux</h3>
 			</div>
 			<div class=" Portfolio-box photography">
-				<a href="/assets/nice.jpg"><img src="/assets/nice.jpg" alt=""></a>
+				<a href="/assets/nice.jpg"><img width="350" height="235" src="/assets/nice.jpg" alt=""></a>
 				<h3>Nice</h3>
 			</div>
 			<div class=" Portfolio-box photography">
-				<a href="/assets/nantes.jpg"><img src="/assets/nantes.jpg" alt=""></a>
+				<a href="/assets/nantes.jpg"><img width="350" height="235" src="/assets/nantes.jpg" alt=""></a>
 				<h3>Nantes</h3>
 			</div>
 			<div class=" Portfolio-box photography">
-				<a href="/assets/Strasbourg.jpg"><img src="/assets/Strasbourg.jpg" alt=""></a>
+				<a href="/assets/Strasbourg.jpg"><img width="350" height="235" src="/assets/Strasbourg.jpg" alt=""></a>
 				<h3>Strasbourg</h3>
 			</div>
 			<div class=" Portfolio-box photography">
-				<a href="/assets/Lyon.jpg"><img src="/assets/Lyon.jpg" alt=""></a>
+				<a href="/assets/Lyon.jpg"><img width="350" height="235" src="/assets/Lyon.jpg" alt=""></a>
 				<h3>Lyon</h3>
 			</div>
 		</div>
