--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -7,7 +7,7 @@
 			<ul class="we-create animated fadeInUp delay-1s">
 				<li>Apprends à coder en communauté</li>
 			</ul>
-			<a class="link animated fadeInUp delay-1s servicelink" href="#service">Get Started</a>
+			<a class="link animated fadeInUp delay-1s servicelink" href="#programme">Découvre le programme</a>
 		</div>
 	</header>
 	<!--header-end-->
