--- a/app/views/shared/_resume.html.erb
+++ b/app/views/shared/_resume.html.erb
@@ -36,7 +36,7 @@
 					</div>
 					<div class="featured-box">
 						<div class="featured-box-col1 wow fadeInRight delay-08s">
-							<i class="fa fa-dashboard"></i>
+							<i class="fa fa-magic"></i>
 						</div>
 						<div class="featured-box-col2 wow fadeInRight delay-08s">
 							<h3>Pas de locaux, ni de professeurs</h3>
