--- a/app/views/shared/_prix.html.erb
+++ b/app/views/shared/_prix.html.erb
@@ -1,32 +1,92 @@
-<section class="main-section client-part" id="client">
-		<!--main-section client-part-start-->
+
+
+	<section class="main-section team" id="team">
+		<!--main-section team-start-->
+	<!--business-talking-end-->
 		<div class="container">
-			<b class="quote-right wow fadeInDown delay-03"><i class="fa fa-quote-right"></i></b>
-			<div class="row">
-				<div class="col-lg-12">
-					<p class="client-part-haead wow fadeInDown delay-05">Nos tarifs<br/>Choisissez la formule qui vous convient</p>
+			<h2>Nos tarifs</h2>
+			<div class="team-leader-block clearfix">
+				<div class="team-leader-box">
+					<div class="team-leader wow fadeInDown delay-03s">
+						<div class="team-leader-shadow"><a href="#"></a></div>
+					</div>
+					<h3 class="wow fadeInDown delay-03s">Gratuit</h3>
+					<div class="featured-box">
+						<div class="featured-box-col1 wow fadeInRight delay-02s">
+							<i class="fa fa-magic"></i>
+						</div>
+						<div class="featured-box-col2 wow fadeInRight delay-02s">
+							<p><br/>Accès à la communauté</p>
+						</div>
+					</div>
+				</div>
+				<div class="team-leader-box">
+					<div class="team-leader  wow fadeInDown delay-06s">
+						<div class="team-leader-shadow"><a href="#"></a></div>
+					</div>
+					<h3 class="wow fadeInDown delay-06s">Classique</h3>
+					<p class="wow fadeInDown delay-06s">
+					<div class="featured-box">
+						<div class="featured-box-col1 wow fadeInRight delay-02s">
+							<i class="fa fa-magic"></i>
+						</div>
+						<div class="featured-box-col2 wow fadeInRight delay-02s">
+							<p><br/>Accès à la communauté</p>
+						</div>
+					</div>
+					<div class="featured-box">
+						<div class="featured-box-col1 wow fadeInRight delay-04s">
+							<i class="fa fa-gift"></i>
+						</div>
+						<div class="featured-box-col2 wow fadeInRight delay-04s">
+							<p><br/>Cours disponible à vie</p>
+						</div>
+					</div>
+					</p>
+				</div>
+				<div class="team-leader-box">
+					<div class="team-leader wow fadeInDown delay-09s">
+						<div class="team-leader-shadow"><a href="#"></a></div>
+					</div>
+					<h3 class="wow fadeInDown delay-09s">Premium</h3>
+					<p class="wow fadeInDown delay-06s">
+					<div class="featured-box">
+						<div class="featured-box-col1 wow fadeInRight delay-02s">
+							<i class="fa fa-magic"></i>
+						</div>
+						<div class="featured-box-col2 wow fadeInRight delay-02s">
+							<p><br/>Accès à la communauté</p>
+						</div>
+					</div>
+					<div class="featured-box">
+						<div class="featured-box-col1 wow fadeInRight delay-04s">
+							<i class="fa fa-gift"></i>
+						</div>
+						<div class="featured-box-col2 wow fadeInRight delay-04s">
+							<p><br/>Cours disponible à vie</p>
+						</div>
+					</div>
+					<div class="featured-box">
+						<div class="featured-box-col1 wow fadeInRight delay-06s">
+							<i class="fa fa-dashboard"></i>
+						</div>
+						<div class="featured-box-col2 wow fadeInRight delay-06s">
+							<p><br/>Mentorat personnalisé</p>
+						</div>
+					</div>
 				</div>
 			</div>
-			<ul class="client wow fadeIn delay-05s">
-				<li><a href="#">
-            	<img src="/assets/client-pic1.jpg" alt="">
-                <h3> Nos tarifs</h3>
-                <span>Pas cher ;)</span>
-            </a></li>
-			</ul>
+
+				<div class="container">
+					<section class="business-talking">
+						<!--business-talking-start-->
+						<div class="container">
+							<h2>Let’s Talk Business.</h2>
+						</div>
+					</section>
+				</div>
+
 		</div>
 	</section>
-	<!--main-section client-part-end-->
-	<div class="c-logo-part">
-		<!--c-logo-part-start-->
-		<div class="container">
-			<ul>
-				<li><a href="#"><img src="/assets/c-liogo1.png" alt=""></a></li>
-				<li><a href="#"><img src="/assets/c-liogo2.png" alt=""></a></li>
-				<li><a href="#"><img src="/assets/c-liogo3.png" alt=""></a></li>
-				<li><a href="#"><img src="/assets/c-liogo4.png" alt=""></a></li>
-				<li><a href="#"><img src="/assets/c-liogo5.png" alt=""></a></li>
-			</ul>
-		</div>
-	</div>
-	<!--c-logo-part-end-->
+	<!--main-section team-end-->
+
