--- a/app/views/shared/_temoignages.html.erb
+++ b/app/views/shared/_temoignages.html.erb
@@ -1,36 +1,39 @@
-<section class="main-section team" id="team">
-		<!--main-section team-start-->
+<section class="main-section client-part" id="client">
+		<!--main-section client-part-start-->
 		<div class="container">
-			<h2>Témoignages</h2>
-			<div class="team-leader-block clearfix">
-				<div class="team-leader-box">
-					<div class="team-leader wow fadeInDown delay-03s">
-						<div class="team-leader-shadow"><a href="#"></a></div>
-						<img src="/assets/team-leader-pic1.jpg" alt="">
-					</div>
-					<h3 class="wow fadeInDown delay-03s">Walter White</h3>
-					<span class="wow fadeInDown delay-03s">Chief Executive Officer</span>
-					<p class="wow fadeInDown delay-03s">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consequat sollicitudin cursus. Dolor sit amet, consectetur adipiscing elit proin consequat.</p>
-				</div>
-				<div class="team-leader-box">
-					<div class="team-leader  wow fadeInDown delay-06s">
-						<div class="team-leader-shadow"><a href="#"></a></div>
-						<img src="/assets/team-leader-pic2.jpg" alt="">
-					</div>
-					<h3 class="wow fadeInDown delay-06s">Jesse Pinkman</h3>
-					<span class="wow fadeInDown delay-06s">Product Manager</span>
-					<p class="wow fadeInDown delay-06s">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consequat sollicitudin cursus. Dolor sit amet, consectetur adipiscing elit proin consequat.</p>
-				</div>
-				<div class="team-leader-box">
-					<div class="team-leader wow fadeInDown delay-09s">
-						<div class="team-leader-shadow"><a href="#"></a></div>
-						<img src="/assets/team-leader-pic3.jpg" alt="">
-					</div>
-					<h3 class="wow fadeInDown delay-09s">Skyler white</h3>
-					<span class="wow fadeInDown delay-09s">Accountant</span>
-					<p class="wow fadeInDown delay-09s">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consequat sollicitudin cursus. Dolor sit amet, consectetur adipiscing elit proin consequat.</p>
+			<b class="quote-right wow fadeInDown delay-03"><i class="fa fa-quote-right"></i></b>
+			<div class="row">
+				<div class="col-lg-12">
+					<p class="client-part-haead wow fadeInDown delay-05">Témoignage</p>
 				</div>
 			</div>
+			<ul class="client wow fadeIn delay-05s">
+				<li><a href="#">
+            	<img src="/assets/client-pic1.jpg" alt="">
+                <h3>Mary</h3>
+                <span>Je venais de finir la piscine de 42 en septembre 2017 avant la formation THP, j’ai eu ma rentrée à 42 en novembre. J’ai connu THP via ma coloc’ qui fouillait un peu sur le net des formations full stack. On cherchait surtout à s’améliorer en tant que dev et surtout à apprendre. Mon ressenti lors de la formation... C’etait dur pendant ces 3 fameuses semaines sur le framework Ruby on Rails, beaucoup de docs, et d’informations qui nous arrivent dans la face</span>
+            </a></li>
+			</ul>
 		</div>
 	</section>
-	<!--main-section team-end-->
+	<!--main-section client-part-end-->
+	<section>
+	<div class="c-logo-part">
+		<!--c-logo-part-start-->
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12">
+					<p class="client-part-haead wow fadeInDown delay-05">Ils nous font confiance :</p>
+				</div>
+			</div>
+			<ul>
+				<li><a href="#"><img src="/assets/c-liogo1.png" alt=""></a></li>
+				<li><a href="#"><img src="/assets/c-liogo2.png" alt=""></a></li>
+				<li><a href="#"><img src="/assets/c-liogo3.png" alt=""></a></li>
+				<li><a href="#"><img src="/assets/c-liogo4.png" alt=""></a></li>
+				<li><a href="#"><img src="/assets/c-liogo5.png" alt=""></a></li>
+			</ul>
+		</div>
+	</div>
+	</section>
+	<!--c-logo-part-end-->
