--- a/app/views/shared/_contact.html.erb
+++ b/app/views/shared/_contact.html.erb
@@ -16,37 +16,29 @@
 						<span>06 28 01 33 40</span>
 					</div>
 					<ul class="social-link">
-						<li class="twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
-						<li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
-						<li class="pinterest"><a href="#"><i class="fa fa-pinterest"></i></a></li>
-						<li class="gplus"><a href="#"><i class="fa fa-google-plus"></i></a></li>
-						<li class="dribbble"><a href="#"><i class="fa fa-dribbble"></i></a></li>
+						<li class="twitter"><a href="https://twitter.com/project_hacking"><i class="fa fa-twitter"></i></a></li>
+						<li class="facebook"><a href="https://www.facebook.com/thehackingproject/"><i class="fa fa-facebook"></i></a></li>
 					</ul>
 				</div>
 				<div class="col-lg-6 col-sm-5 wow fadeInUp delay-05s">
 					<div class="form">
 
-						<div id="sendmessage">Your message has been sent. Thank you!</div>
+						<div id="sendmessage">Tu es inscrit à la newsletter. Merci !</div>
 						<div id="errormessage"></div>
 						<form action="" method="post" role="form" class="contactForm">
 							<div class="form-group">
-								<input type="text" name="name" class="form-control input-text" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+								<h3>Souhaites-tu t'inscire à la newsletter ?</h3>
+							</div>
+							<div class="form-group">
+								<input type="text" name="name" class="form-control input-text" id="name" placeholder="Ton nom" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
 								<div class="validation"></div>
 							</div>
 							<div class="form-group">
-								<input type="email" class="form-control input-text" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
-								<div class="validation"></div>
-							</div>
-							<div class="form-group">
-								<input type="text" class="form-control input-text" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-								<div class="validation"></div>
-							</div>
-							<div class="form-group">
-								<textarea class="form-control input-text text-area" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
+								<input type="email" class="form-control input-text" name="email" id="email" placeholder="exemple@mail.com" data-rule="email" data-msg="Please enter a valid email" />
 								<div class="validation"></div>
 							</div>
 
-							<div class="text-center"><button type="submit" class="input-btn">Send Message</button></div>
+							<div class="text-center"><button type="submit" class="input-btn">Je veux m'inscrire à la newsletter !</button></div>
 						</form>
 					</div>
 				</div>
