route, controller et index gotham ok

--- a/app/views/home/gotham.html.erb
+++ b/app/views/home/gotham.html.erb
@@ -9,7 +9,7 @@
 
 <body>
 
-	<%= render "shared/_header_gotham" %>
+	<%= render "shared/header_gotham" %>
 
 	<%= render "shared/navbar_gotham" %>
 
