changement du header

--- a/app/views/shared/_header_gotham.html.erb
+++ b/app/views/shared/_header_gotham.html.erb
@@ -1,4 +1,4 @@
-<header class="header" id="header">
+<header class="headergotham" id="headergotham">
 		<!--header-start-->
 		<div class="container">
 			<figure class="logo animated fadeInDown delay-07s">
