--- a/app/assets/stylesheets/components/style.scss
+++ b/app/assets/stylesheets/components/style.scss
@@ -100,6 +100,13 @@ p{
 	background:url(/assets/pw_maze_black_2X.png) left top repeat;
 	padding:280px 0;
 }
+
+.headergotham{
+	text-align:center;
+	background:url(/assets/gbg1.png) left top repeat;
+	padding:280px 0;
+}
+
 .logo{
 	width:500px;
 	margin:0 auto 35px;
