--- a/app/views/home/gotham.html.erb
+++ b/app/views/home/gotham.html.erb
@@ -7,7 +7,7 @@
 
 </head>
 
-<body>
+<body class ="body_gotham">
 
 	<%= render "shared/header_gotham" %>
 
@@ -19,9 +19,9 @@
 
 	<%= render "shared/villes_gotham" %>
 
-	<%= render "shared/prix_gotham" %>
-
 	<%= render "shared/temoignages_gotham" %>
+
+	<%= render "shared/prix_gotham" %>
 
 	<%= render "shared/contact" %>
 
