--- a/app/views/shared/_programme_gotham.html.erb
+++ b/app/views/shared/_programme_gotham.html.erb
@@ -34,7 +34,7 @@
 					</div>
 				</div>
 				<figure class="col-lg-8 col-sm-6  text-right wow fadeInUp delay-02s">
-					<img  src="/assets/macbook-pro.png" alt="">
+					<img  src="/assets/batman1.png" alt="">
 				</figure>
 
 			</div>
