--- a/app/views/shared/_resume_gotham.html.erb
+++ b/app/views/shared/_resume_gotham.html.erb
@@ -4,7 +4,7 @@
 		<div class="container">
 			<div class="row">
 				<figure class="col-lg-5 col-sm-4 wow fadeInLeft">
-					<img src="/assets/iphone.png" alt="">
+					<img src="/assets/batman2.png" alt="">
 				</figure>
 				<div class="col-lg-7 col-sm-8 featured-work">
 					<h2>THP résumé en 4 points</h2>
