--- a/app/views/shared/_villes_gotham.html.erb
+++ b/app/views/shared/_villes_gotham.html.erb
@@ -6,17 +6,17 @@
 		</div>
 		<div class="portfolioContainer wow fadeInUp delay-04s">
 			<div class=" Portfolio-box printdesign">
-				<a href="/assets/Portfolio-pic1.jpg"><img width="350" height="235" src="/assets/Portfolio-pic1.jpg" alt=""></a>
+				<a href="/assets/Portfolio-pic1.jpg"><img width="350" height="235" src="/assets/Port-pic1.jpg" alt=""></a>
 				<h3>Le café des chats</h3>
 				<h4>80 avenue Gordon</h4>
 			</div>
 			<div class="Portfolio-box webdesign">
-				<a href="/assets/Portfolio-pic2.jpg"><img width="350" height="235" src="/assets/Portfolio-pic2.jpg" alt=""></a>
+				<a href="/assets/Portfolio-pic2.jpg"><img width="350" height="235" src="/assets/Port-pic2.jpg" alt=""></a>
 				<h3>Café garden</h3>
 				<h4>10 rue de la batcav</h4>
 			</div>
 			<div class=" Portfolio-box branding">
-				<a href="/assets/Grenoble.jpg"><img width="350" height="235" src="/assets/Portfolio-pic3.jpg" alt=""></a>
+				<a href="/assets/Grenoble.jpg"><img width="350" height="235" src="/assets/Port-pic3.jpg" alt=""></a>
 				<h3>Salon de Thé Mimi</h3>
 				<h4>24 boulevard du Joker</h4>
 			</div>
