--- a/app/views/shared/_temoignages_gotham.html.erb
+++ b/app/views/shared/_temoignages_gotham.html.erb
@@ -10,48 +10,48 @@
 				<section class="main-section team" id="team">
 		<!--main-section team-start-->
 		<div class="container">
+			<div class="team-leader-box-gotham">
 			<div class="team-leader-block clearfix">
 				<div class="team-leader-box">
 					<div class="team-leader wow fadeInDown delay-03s">
 						<div class="team-leader-shadow"><a href="#"></a></div>
-						<img src="/assets/team-leader-pic1.jpg" alt="">
+						<img src="/assets/team-pic1.jpg" alt="">
 					</div>
-					<h3 class="wow fadeInDown delay-03s">Walter White</h3>
-					<span class="wow fadeInDown delay-03s">Chief Executive Officer</span>
-					<p class="wow fadeInDown delay-03s">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consequat sollicitudin cursus. Dolor sit amet, consectetur adipiscing elit proin consequat.</p>
+					<h3 class="wow fadeInDown delay-03s" style="color:white;">Catwoman</h3>
+					<p class="wow fadeInDown delay-03s" style="color:white;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consequat sollicitudin cursus. Dolor sit amet, consectetur adipiscing elit proin consequat.</p>
 				</div>
 				<div class="team-leader-box">
 					<div class="team-leader  wow fadeInDown delay-06s">
 						<div class="team-leader-shadow"><a href="#"></a></div>
-						<img src="/assets/team-leader-pic2.jpg" alt="">
+						<img src="/assets/team-pic2.jpg" alt="">
 					</div>
-					<h3 class="wow fadeInDown delay-06s">Jesse Pinkman</h3>
-					<span class="wow fadeInDown delay-06s">Product Manager</span>
-					<p class="wow fadeInDown delay-06s">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consequat sollicitudin cursus. Dolor sit amet, consectetur adipiscing elit proin consequat.</p>
+					<h3 class="wow fadeInDown delay-06s" style="color:white;">Le Joker</h3>
+					<p class="wow fadeInDown delay-06s" style="color:white;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consequat sollicitudin cursus. Dolor sit amet, consectetur adipiscing elit proin consequat.</p>
 				</div>
 				<div class="team-leader-box">
 					<div class="team-leader wow fadeInDown delay-09s">
 						<div class="team-leader-shadow"><a href="#"></a></div>
-						<img src="/assets/team-leader-pic3.jpg" alt="">
+						<img src="/assets/team-pic3.jpg" alt="">
 					</div>
-					<h3 class="wow fadeInDown delay-09s">Skyler white</h3>
-					<span class="wow fadeInDown delay-09s">Accountant</span>
-					<p class="wow fadeInDown delay-09s">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consequat sollicitudin cursus. Dolor sit amet, consectetur adipiscing elit proin consequat.</p>
+					<h3 class="wow fadeInDown delay-09s" style="color:white;">Pingouin</h3>
+					<p class="wow fadeInDown delay-09s" style="color:white;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consequat sollicitudin cursus. Dolor sit amet, consectetur adipiscing elit proin consequat.</p>
 				</div>
 			</div>
 		</div>
+	</div>
 	</section>
 		</div>
 	</section>
-<!--c-logo-part-end-->
-	<div class="c-logo-part" class="custombar">
+
+
+	<div class="c-logo-part-gotham" class="custombar">
 		<!--c-logo-part-start-->
 		<div class="container">
 			<ul>
 				<li><a href="#"><img width="130" height="110" src="/assets/c-liogo1.png" alt=""></a></li>
 				<li><a href="#"><img width="130" height="110"  src="/assets/c-liogo2.png" alt=""></a></li>
-				<li><a href="#"><img width="130" height="110"  src="/assets/c-liogo3.png" alt=""></a></li>
-				<li><a href="#"><img width="130" height="110"  src="/assets/c-liogo4.png" alt=""></a></li>
+				<li><a href="#"><img width="130" height="110"  src="/assets/liogo3.png" alt=""></a></li>
+				<li><a href="#"><img width="130" height="110"  src="/assets/liogo4.png" alt=""></a></li>
 				<li><a href="#"><img width="130" height="110"  src="/assets/c-liogo5.png" alt=""></a></li>
 			</ul>
 		</div>
