ajout vue globale

--- a/app/views/shared/_navbar_gotham.html.erb
+++ b/app/views/shared/_navbar_gotham.html.erb
@@ -2,7 +2,7 @@
 		<!--main-nav-start-->
 		<div class="container">
 			<ul class="main-nav">
-				<li><a href="#header">Accueil</a></li>
+				<li><a href="home#index">Accueil</a></li>
 				<li><a href="#programme">Programme</a></li>
 				<li><a href="#villes">Lieux</a></li>
 				<li class="small-logo"><a href="#header"><img width="75" height="75" src="/assets/small-logo.png" alt=""></a></li>
