--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,25 +9,7 @@
 
 <body>
 
-	<%= render "shared/header" %>
-
-	<%= render "shared/navbar" %>
-
-	<%= render "shared/programme" %>
-
-	<%= render "shared/resume" %>
-
-	<%= render "shared/villes" %>
-
-	<%= render "shared/prix" %>
-
-	<%= render "shared/temoignages" %>
-
-	<%= render "shared/contact" %>
-
-	<%= render "shared/footer" %>
-
-	<%= render "shared/script" %>
+	<%= render "shared/accueil" %>
 
 </body>
 
