ajout error, successful, background

--- a/app/assets/stylesheets/components/style.scss
+++ b/app/assets/stylesheets/components/style.scss
@@ -108,6 +108,12 @@ p{
 	padding:280px 0;
 }
 
+.headergriezmann{
+	text-align:center;
+	background:url(/assets/2etoiles_bis.png) center;
+	padding:280px 0;
+}
+
 .logo{
 	width:500px;
 	margin:0 auto 35px;
