--- a/app/views/shared/_navbar_gotham.html.erb
+++ b/app/views/shared/_navbar_gotham.html.erb
@@ -6,8 +6,8 @@
 				<li><a href="#programme">Programme</a></li>
 				<li><a href="#villes">Lieux</a></li>
 				<li class="small-logo"><a href="#header"><img width="75" height="75" src="/assets/small-logo.png" alt=""></a></li>
-				<li><a href="#client">Prix</a></li>
-				<li><a href="#team">Témoignages</a></li>
+				<li><a href="#team">Prix</a></li>
+				<li><a href="#client">Témoignages</a></li>
 				<li><a href="#contact">Contact</a></li>
 			</ul>
 			<a class="res-nav_click" href="#"><i class="fa fa-bars"></i></a>
