--- a/app/views/shared/_contact.html.erb
+++ b/app/views/shared/_contact.html.erb
@@ -25,7 +25,7 @@
 
 						<div id="sendmessage">Tu es inscrit à la newsletter. Merci !</div>
 						<div id="errormessage"></div>
-						<form action="/gotham" method="post" role="form" class="contactForm">
+						<form action="" method="post" role="form" class="contactForm">
 							<input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
 							<div class="form-group">
 								<h3>Souhaites-tu t'inscrire à la newsletter ?</h3>
