modif temoignage, readme

--- a/app/views/home/griezmann.html.erb
+++ b/app/views/home/griezmann.html.erb
@@ -21,7 +21,7 @@
 
 	<%= render "shared/prix" %>
 
-	<%= render "shared/temoignages" %>
+	<%= render "shared/temoignages_griezmann" %>
 
 	<%= render "shared/contact" %>
 
